Changed data folder structure to follow the rules

--- a/notebook/Yue_Tianlin_HW2.ipynb
+++ b/notebook/Yue_Tianlin_HW2.ipynb
@@ -86,7 +86,7 @@
     }
    ],
    "source": [
-    "df = pd.read_excel(\"../data/Folds5x2_pp.xlsx\")\n",
+    "df = pd.read_excel(\"../data/Folds5x2/Folds5x2_pp.xlsx\")\n",
     "print(df.head())"
    ]
   },
@@ -155,7 +155,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x24f6a3d5220>"
+       "<seaborn.axisgrid.PairGrid at 0x1b73dd259d0>"
       ]
      },
      "execution_count": 4,
@@ -332,8 +332,8 @@
       "Dep. Variable:                     PE   R-squared:                       0.899\n",
       "Model:                            OLS   Adj. R-squared:                  0.899\n",
       "Method:                 Least Squares   F-statistic:                 8.510e+04\n",
-      "Date:                Thu, 25 Sep 2025   Prob (F-statistic):               0.00\n",
-      "Time:                        22:24:10   Log-Likelihood:                -29756.\n",
+      "Date:                Fri, 03 Oct 2025   Prob (F-statistic):               0.00\n",
+      "Time:                        11:16:22   Log-Likelihood:                -29756.\n",
       "No. Observations:                9568   AIC:                         5.952e+04\n",
       "Df Residuals:                    9566   BIC:                         5.953e+04\n",
       "Df Model:                           1                                         \n",
@@ -393,8 +393,8 @@
       "Dep. Variable:                     PE   R-squared:                       0.757\n",
       "Model:                            OLS   Adj. R-squared:                  0.756\n",
       "Method:                 Least Squares   F-statistic:                 2.972e+04\n",
-      "Date:                Thu, 25 Sep 2025   Prob (F-statistic):               0.00\n",
-      "Time:                        22:24:10   Log-Likelihood:                -33963.\n",
+      "Date:                Fri, 03 Oct 2025   Prob (F-statistic):               0.00\n",
+      "Time:                        11:16:23   Log-Likelihood:                -33963.\n",
       "No. Observations:                9568   AIC:                         6.793e+04\n",
       "Df Residuals:                    9566   BIC:                         6.794e+04\n",
       "Df Model:                           1                                         \n",
@@ -454,8 +454,8 @@
       "Dep. Variable:                     PE   R-squared:                       0.269\n",
       "Model:                            OLS   Adj. R-squared:                  0.269\n",
       "Method:                 Least Squares   F-statistic:                     3516.\n",
-      "Date:                Thu, 25 Sep 2025   Prob (F-statistic):               0.00\n",
-      "Time:                        22:24:11   Log-Likelihood:                -39224.\n",
+      "Date:                Fri, 03 Oct 2025   Prob (F-statistic):               0.00\n",
+      "Time:                        11:16:24   Log-Likelihood:                -39224.\n",
       "No. Observations:                9568   AIC:                         7.845e+04\n",
       "Df Residuals:                    9566   BIC:                         7.847e+04\n",
       "Df Model:                           1                                         \n",
@@ -517,8 +517,8 @@
       "Dep. Variable:                     PE   R-squared:                       0.152\n",
       "Model:                            OLS   Adj. R-squared:                  0.152\n",
       "Method:                 Least Squares   F-statistic:                     1714.\n",
-      "Date:                Thu, 25 Sep 2025   Prob (F-statistic):               0.00\n",
-      "Time:                        22:24:11   Log-Likelihood:                -39933.\n",
+      "Date:                Fri, 03 Oct 2025   Prob (F-statistic):               0.00\n",
+      "Time:                        11:16:25   Log-Likelihood:                -39933.\n",
       "No. Observations:                9568   AIC:                         7.987e+04\n",
       "Df Residuals:                    9566   BIC:                         7.988e+04\n",
       "Df Model:                           1                                         \n",
@@ -626,8 +626,8 @@
       "Dep. Variable:                     PE   R-squared:                       0.929\n",
       "Model:                            OLS   Adj. R-squared:                  0.929\n",
       "Method:                 Least Squares   F-statistic:                 3.114e+04\n",
-      "Date:                Thu, 25 Sep 2025   Prob (F-statistic):               0.00\n",
-      "Time:                        22:24:11   Log-Likelihood:                -28088.\n",
+      "Date:                Fri, 03 Oct 2025   Prob (F-statistic):               0.00\n",
+      "Time:                        11:16:26   Log-Likelihood:                -28088.\n",
       "No. Observations:                9568   AIC:                         5.619e+04\n",
       "Df Residuals:                    9563   BIC:                         5.622e+04\n",
       "Df Model:                           4                                         \n",
@@ -741,8 +741,8 @@
       "Dep. Variable:                     PE   R-squared:                       0.912\n",
       "Model:                            OLS   Adj. R-squared:                  0.912\n",
       "Method:                 Least Squares   F-statistic:                 3.299e+04\n",
-      "Date:                Thu, 25 Sep 2025   Prob (F-statistic):               0.00\n",
-      "Time:                        22:24:12   Log-Likelihood:                -29101.\n",
+      "Date:                Fri, 03 Oct 2025   Prob (F-statistic):               0.00\n",
+      "Time:                        11:16:26   Log-Likelihood:                -29101.\n",
       "No. Observations:                9568   AIC:                         5.821e+04\n",
       "Df Residuals:                    9564   BIC:                         5.824e+04\n",
       "Df Model:                           3                                         \n",
@@ -773,8 +773,8 @@
       "Dep. Variable:                     PE   R-squared:                       0.775\n",
       "Model:                            OLS   Adj. R-squared:                  0.775\n",
       "Method:                 Least Squares   F-statistic:                 1.098e+04\n",
-      "Date:                Thu, 25 Sep 2025   Prob (F-statistic):               0.00\n",
-      "Time:                        22:24:12   Log-Likelihood:                -33585.\n",
+      "Date:                Fri, 03 Oct 2025   Prob (F-statistic):               0.00\n",
+      "Time:                        11:16:26   Log-Likelihood:                -33585.\n",
       "No. Observations:                9568   AIC:                         6.718e+04\n",
       "Df Residuals:                    9564   BIC:                         6.721e+04\n",
       "Df Model:                           3                                         \n",
@@ -805,8 +805,8 @@
       "Dep. Variable:                     PE   R-squared:                       0.275\n",
       "Model:                            OLS   Adj. R-squared:                  0.275\n",
       "Method:                 Least Squares   F-statistic:                     1813.\n",
-      "Date:                Thu, 25 Sep 2025   Prob (F-statistic):               0.00\n",
-      "Time:                        22:24:12   Log-Likelihood:                -39184.\n",
+      "Date:                Fri, 03 Oct 2025   Prob (F-statistic):               0.00\n",
+      "Time:                        11:16:26   Log-Likelihood:                -39184.\n",
       "No. Observations:                9568   AIC:                         7.837e+04\n",
       "Df Residuals:                    9565   BIC:                         7.840e+04\n",
       "Df Model:                           2                                         \n",
@@ -837,8 +837,8 @@
       "Dep. Variable:                     PE   R-squared:                       0.154\n",
       "Model:                            OLS   Adj. R-squared:                  0.153\n",
       "Method:                 Least Squares   F-statistic:                     579.2\n",
-      "Date:                Thu, 25 Sep 2025   Prob (F-statistic):               0.00\n",
-      "Time:                        22:24:12   Log-Likelihood:                -39923.\n",
+      "Date:                Fri, 03 Oct 2025   Prob (F-statistic):               0.00\n",
+      "Time:                        11:16:26   Log-Likelihood:                -39923.\n",
       "No. Observations:                9568   AIC:                         7.985e+04\n",
       "Df Residuals:                    9564   BIC:                         7.988e+04\n",
       "Df Model:                           3                                         \n",
@@ -912,8 +912,8 @@
       "Dep. Variable:                     PE   R-squared:                       0.938\n",
       "Model:                            OLS   Adj. R-squared:                  0.937\n",
       "Method:                 Least Squares   F-statistic:                     9568.\n",
-      "Date:                Thu, 25 Sep 2025   Prob (F-statistic):               0.00\n",
-      "Time:                        22:24:12   Log-Likelihood:                -27450.\n",
+      "Date:                Fri, 03 Oct 2025   Prob (F-statistic):               0.00\n",
+      "Time:                        11:16:26   Log-Likelihood:                -27450.\n",
       "No. Observations:                9568   AIC:                         5.493e+04\n",
       "Df Residuals:                    9552   BIC:                         5.505e+04\n",
       "Df Model:                          15                                         \n",
